--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <title>GaunGhar Organic - 100% Organic Oils</title>
 </head>
 
-<body>
+<body className="overflow-x-hidden">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
