made minor changes throughout the wenbsite to impprove responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,48 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/android-chrome-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/android-chrome-512x512.png">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="manifest" href="/site.webmanifest">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <meta name="keywords" content="organic, oils, GauGhar, natural, health, wellness" />
-  <meta name="author" content="GauGhar Team" />
+  <title>GaunGhar Organic - 100% Pure & Natural Oils</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/jpeg" sizes="512x512" href="%PUBLIC_URL%/favicon_GO.jpeg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon_GO_NBG.png" />
+
+  <!-- PWA Manifest -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>GaunGhar Organic - 100% Organic Oils</title>
+
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="GaunGhar Organic - 100% Pure & Natural Oils">
+  <meta name="description"
+    content="Discover the purity of nature with GaunGhar Organic. We provide 100% organic oils directly sourced from farms to promote your health and wellness.">
+  <meta name="keywords"
+    content="organic oils, GauGhar, GaunGhar, natural oils, wellness, essential oils, pure oils, health, Nepal organic, herbal oils">
+  <meta name="author" content="GaunGhar Team" />
+  <meta name="theme-color" content="#000000" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.gaunghar-organic.com/">
+  <meta property="og:title" content="GaunGhar Organic - 100% Pure & Natural Oils">
+  <meta property="og:description"
+    content="Pure organic oils for your health and wellness – naturally extracted and eco-friendly.">
+  <meta property="og:image" content="%PUBLIC_URL%/favicon_GO.jpeg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://www.gaunghar-organic.com/">
+  <meta property="twitter:title" content="GaunGhar Organic - 100% Pure & Natural Oils">
+  <meta property="twitter:description" content="Explore our range of 100% organic oils made with love and care.">
+  <meta property="twitter:image" content="%PUBLIC_URL%/favicon_GO.jpeg" />
+
+  <!-- Canonical Link -->
+  <link rel="canonical" href="https://www.gaunghar-organic.com/" />
 </head>
 
-<body className="overflow-x-hidden">
+<body class="overflow-x-hidden">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
